Bug 168737 - FILEOPEN DOCX Overlapping redlines: multiple Accept All / Reject All needed
Summary: FILEOPEN DOCX Overlapping redlines: multiple Accept All / Reject All needed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2 t...
Keywords: filter:docx
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2025-10-08 07:40 UTC by Gabor Kelemen (Collabora)
Modified: 2026-01-20 14:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (14.20 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-10-08 07:40 UTC, Gabor Kelemen (Collabora)
Details
The example file after pressing Accept All (69.52 KB, image/png)
2025-10-08 07:41 UTC, Gabor Kelemen (Collabora)
Details
The example file after pressing Reject All (71.21 KB, image/png)
2025-10-08 07:42 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-10-08 07:40:49 UTC
Created attachment 203195 [details]
Example file from Word 2016

Attached example file was made in Word to imitate a change tracked editing scenario: inserting text, formatting it, then deleting part of it as another user.

This file opens fine in Writer, but to accept or reject all changes, the user needs to press the Accept All or Reject All buttons several times, which is contrary to their supposed function.

1. Open attached file
2. In the Writer sidebar go to the Manage Changes section
3/a. Press Accept All
-> a deletion is still there 
3/b. Press Reject All
-> Formatting, insertion and deletion are still there. You need to press 4 times the Reject all to really reject all tracked changes in this file.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 708abf24664a9a1aaeac452bcc8436026030e74e
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

This was differently bad in 25.8:
Accept All did not leave changes behind, but it gave incorrect results
Reject All left similar amount of changes behind, but crashed on the second click.
Comment 1 Gabor Kelemen (Collabora) 2025-10-08 07:41:26 UTC
Created attachment 203196 [details]
The example file after pressing Accept All
Comment 2 Gabor Kelemen (Collabora) 2025-10-08 07:42:07 UTC
Created attachment 203197 [details]
The example file after pressing Reject All
Comment 3 Sarah Lim 2025-11-03 09:35:16 UTC
Confirmed that the bug is present in master.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_FI); UI: en-GB
Calc: threaded
Comment 4 Buovjaga 2025-11-08 17:41:33 UTC
(In reply to Gabor Kelemen (Collabora) from comment #0)
> This was differently bad in 25.8:
> Accept All did not leave changes behind, but it gave incorrect results
> Reject All left similar amount of changes behind, but crashed on the second
> click.

The behaviour change was commit 55640f9f0a4741f8e4b5b98096af822cee71da2c
Comment 5 Miklos Vajna 2025-12-10 09:16:29 UTC
(In reply to Buovjaga from comment #4)
> The behaviour change was commit 55640f9f0a4741f8e4b5b98096af822cee71da2c

Thanks for the bisect, let me see.
Comment 6 Commit Notification 2025-12-12 11:08:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/874d2fc70bd9e90259f2e1119577a9339b7fc457

tdf#168737 sw interdependent redlines, direct: fix accept-all from dialog

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-12-13 07:45:14 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/3a83575afce7376d7ea91d4d15d6e82ba91d9fbf

tdf#168737 sw interdependent redlines, direct: fix accept-all from dialog

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-12-17 11:52:40 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8e513d30d1bd4c69e2e155e72f61897fc830adbb

tdf#168737 sw interdependent redlines, reject all: fix ignored format redlines

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-12-17 14:03:53 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/89e7434732fbb74aaeef594f603b922d76b9b55d

tdf#168737 sw interdependent redlines, reject all: fix ignored format redlines

It will be available in 26.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2026-01-20 09:36:27 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/ebaab7c8aa64102ec7f507501dc421925f5927fb

tdf#168737 sw interdependent redlines, reject all: fix ignored format redlines

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2026-01-20 14:42:27 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/d1bb1f2f2c682ae0bac555b9e30bd0d19e624274

Revert "tdf#168737 sw interdependent redlines, reject all: fix ignored format redlines"

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.