tdf#168737 sw interdependent redlines, direct: fix accept-all from dialog

Open the bugdoc, open the manage changes dialog, accept all changes by
clicking on the "accept all" button, not all changes are accepted.

This went wrong in commit 55640f9f0a4741f8e4b5b98096af822cee71da2c
(tdf#166319 sw interdependent redlines: allow accept/reject for fmt on
ins/del, 2025-09-29), which made it possible to only accept the directly
selectable part of a hierarchical redline (e.g. only the format of a
format-on-insert construct). Notice how clicking on the "accept all"
toolbar button works fine, since it doesn't enable the "direct" mode.

Fix the problem by extending SwRedlineAcceptDlg::CallAcceptReject(), so
it keeps asking Writer core to accept/reject changes directly when one
or more redline is selected, but go back to the default non-direct mode
when accepting or rejecting all redlines.

Cover this with a UI test, since the problem here is not around how
these redlines are rejected, but it's about how UI code invokes performs
these operations using SwWrtShell.

Change-Id: I8024d352b1512bd8d5c608087b684502624fd0a6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195423
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>